@@ -70,6 +70,7 @@ extern void rbclt_script_init ();
 extern void rbclt_score_init ();
 extern void rbclt_model_init ();
 extern void rbclt_list_model_init ();
+extern void rbclt_fog_init ();
 
 extern void rb_cogl_init ();
 extern void rb_cogl_texture_init ();
@@ -249,6 +250,7 @@ Init_clutter ()
   rbclt_score_init ();
   rbclt_model_init ();
   rbclt_list_model_init ();
+  rbclt_fog_init ();
 
   rb_cogl_init ();
   rb_cogl_texture_init ();
